data/logs/logs4-30---xZr3qQ.txt
base.py:30,16:33:08:__connect:653:xZr3qQ -- Created new connection <sqlite3.Connection object at 0x7fb7302c94e0>
base.py:30,16:33:08:_cursor_execute:1311:xZr3qQ -- SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1
base.py:30,16:33:08:_cursor_execute:1312:xZr3qQ -- ()
base.py:30,16:33:08:_cursor_execute:1311:xZr3qQ -- SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1
base.py:30,16:33:08:_cursor_execute:1312:xZr3qQ -- ()
base.py:30,16:33:08:checkout:507:xZr3qQ -- Connection <sqlite3.Connection object at 0x7fb7302c94e0> checked out from pool
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("files")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'fileId', 'VARCHAR(300)', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (2, 'lastModDate', 'DATETIME', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (3, 'parent_id', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (4, 'isFile', 'BOOLEAN', 0, None, 0)
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("owner")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'name', 'VARCHAR(50)', 0, None, 0)
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("dates")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (2, 'date', 'FLOAT', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (3, 'adds', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (4, 'deletes', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (5, 'bin_width', 'FLOAT', 0, None, 0)
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("closure")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'parent', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (2, 'child', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (4, 'depth', 'INTEGER', 0, None, 0)
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("filename")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (2, 'fileName', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
base.py:30,16:33:08:_execute_context:1205:xZr3qQ -- PRAGMA main.table_info("tasks")
base.py:30,16:33:08:_execute_context:1207:xZr3qQ -- ()
result.p:30,16:33:08:_init_metadata:809:xZr3qQ -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (1, 'path', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (2, 'creds', 'BLOB', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (3, 'fileid', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:33:08:process_rows:1249:xZr3qQ -- Row (4, 'userid', 'VARCHAR(600)', 0, None, 0)
base.py:30,16:33:08:_finalize_fairy:684:xZr3qQ -- Connection <sqlite3.Connection object at 0x7fb7302c94e0> being returned to pool
base.py:30,16:33:08:_reset:872:xZr3qQ -- Connection <sqlite3.Connection object at 0x7fb7302c94e0> rollback-on-return
base.py:30,16:33:08:_close_connection:267:xZr3qQ -- Closing connection <sqlite3.Connection object at 0x7fb7302c94e0>
base.py:30,16:33:08:__connect:653:xZr3qQ -- Created new connection <sqlite3.Connection object at 0x7fb7302c94e0>
base.py:30,16:33:08:checkout:507:xZr3qQ -- Connection <sqlite3.Connection object at 0x7fb7302c94e0> checked out from pool
configlo:30,16:33:08:handle_exception:84:xZr3qQ -- Custom Uncaught exception
Traceback (most recent call last):
  File "run.py", line 28, in <module>
    app = create_flask_serv()
  File "/home/henry/pydocs/flaskr/__init__.py", line 14, in create_flask_serv
    from flaskr.dashapp import register_dashapp
  File "/home/henry/pydocs/flaskr/dashapp/__init__.py", line 2, in <module>
    from flaskr.dashapp.callbacks import test
  File "/home/henry/pydocs/flaskr/dashapp/callbacks.py", line 11, in <module>
    from flaskr.dashapp.dash_functions import genOptList, gen_fListFig, gen_margin, idIndexMapper, namesList
  File "/home/henry/pydocs/flaskr/dashapp/dash_functions.py", line 35
    def genOptList(userid):
    ^
IndentationError: expected an indented block
configlo:30,16:33:08:mp_sendmail:121:xZr3qQ -- sending mail
configlo:30,16:33:10:handle_exception:87:xZr3qQ -- exiting! from sshook
